--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,10 @@ body {
   background: #1d1d1d;
   margin: 2px;
   box-shadow: 0 0 2px #000;
-  transition: 2s ease;
+  transition: 3s ease;
+
 }
 
 .square:hover {
-  transition-duration: ;
+  transition-duration: 1ms;
 }
